<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.keyla.sgc.activity.ViewModel.LoginViewModel"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="400dp"
                        android:layout_height="200dp"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/logo" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="vertical">
                        <EditText
                            android:id="@+id/txtEmail"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginTop="10dp"
                            android:hint="E-mail"
                            android:inputType="textEmailAddress"
                            android:textSize="16sp"
                            app:addTextChangedListener="@{viewModel.getLoginTextWatcher}"/>

                        <TextView
                            android:id="@+id/textViewEmailInvalid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="5dp"
                            android:autoLink="none"
                            android:text="@string/error_login_empty"
                            android:textColor="@color/errorMessage"
                            android:textAllCaps="false"
                            android:visibility="invisible"
                            android:textSize="14sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="vertical">
                        <EditText
                            android:id="@+id/txtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Senha"
                            android:inputType="textPassword"
                            android:textSize="16sp"
                            app:addTextChangedListener="@{viewModel.getPasswordTextWatcher}"/>
                        <TextView
                            android:id="@+id/textViewPasswordInvalid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="5dp"
                            android:autoLink="none"
                            android:text="@string/error_password_empty"
                            android:textColor="@color/errorMessage"
                            android:textAllCaps="false"
                            android:visibility="invisible"
                            android:textSize="14sp" />
                        <TextView
                            android:id="@+id/textViewLoginInvalid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="5dp"
                            android:autoLink="none"
                            android:text="@string/error_login_failed"
                            android:textColor="@color/errorMessage"
                            android:textAllCaps="false"
                            android:visibility="invisible"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">
                    <Button
                        android:onClick="@{viewModel::onLoginClicked}"
                        android:id="@+id/buttonLogin"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/colorButtonLogin"
                        android:text="Login"
                        android:textAllCaps="false"
                        android:textColor="@color/textColorButtonLogin"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/textViewRecoverPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:autoLink="none"
                        android:text="@string/recover_password"
                        android:gravity="center"
                        android:textAllCaps="false"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/CreateAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/create_account"
                        android:textSize="15sp" />
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</layout>